<resources>
    @global
    <string name="top_bar">Top Horizontal Bar</string>
    <string name="bottom_bar">Bottom Horizontal Bar</string>
    <string name="nav_desc">To Open Navigation</string>
    <string name="banner_title">COMP3504 Inventory System</string>>
    <string name="dashboard_scroll">To scroll things</string>

    @Dashboard
    <string name="app_name">COMP3504\n Inventory System</string>
    <string name="exit_desc">To Close the App</string>
    <string name="add_desc">To Add Item</string>
    <string name="list_desc">To List Items</string>
    <string name="search_desc">To Search for an Item</string>
    <string name="info_desc">To Show App Information</string>

    @Menu
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="dashboard_title">Dashboard</string>


    @addItem Activity
    @Titles
    <string name="addItem_title">Add Item</string>
    <string name="addItem_title_itemId">Item ID:</string>
    <string name="addItem_title_name">Item Name:</string>
    <string name="addItem_title_quantity">Quantity:</string>
    <string name="addItem_title_price">Price:</string>
    <string name="addItem_title_supplierID">Supplier ID:</string>

    @Hints
    <string name="addItem_hint_itemId">Enter item ID</string>
    <string name="addItem_hint_name">Enter item name</string>
    <string name="addItem_hint_quantity">Enter item quantity</string>
    <string name="addItem_hint_price">Enter item price</string>
    <string name="addItem_hint_supplierID">Enter supplier ID</string>
    
    @autoHints
    <string name="addItem_autoHints_itemId">3000</string>
    <string name="addItem_autoHints_name">Willie Widgets</string>
    <string name="addItem_autoHints_quantity">10</string>
    <string name="addItem_autoHints_price">14.50</string>
    <string name="addItem_autoHints_supplierID">50003</string>

    @buttons
    <string name="addItem_submit_button">Submit</string>
    <string name="searchItem_button">Search</string>

    @searchItem Activity
    <string name="searchItem_title">Search Item</string>

    @listItem Activity
    <string name="listItem_title">List Item</string>
    <string name="listItem_itemId">Item ID</string>
    <string name="listItem_itemName">Item Name</string>
    <string name="listItem_itemQty">Item Quantity</string>
    <string name="listItem_itemPrice">Item Price</string>
    <string name="listItem_itemSuppID">Item Supplier ID</string>


    @info Activity
    <string name="info_title">App Info</string>
    <string name="info_title_banner">COMP3504\nAssignment 03</string>
    <string name="info_group">Group Members:</string>
    <string name="info_Miroslav">Miroslav Nikolov</string>
    <string name="info_Terrence">Terrence Plunkett</string>
    <string name="info_Travis">Travis Tkachyk</string>
    <string name="info_Lorenzo">Lorenzo Young</string>

    @API
    <string name="host">example.com</string>
    <integer name="port">80</integer>
</resources>