<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/top_bar"
        android:layout_width="421dp"
        android:layout_height="54dp"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-8dp"
        android:backgroundTint="#848384"
        android:contentDescription="@string/top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/title_bar"
        app:tint="#838283"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/bottom_bar"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="421dp"
        android:layout_height="54dp"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="-8dp"
        android:adjustViewBounds="false"
        android:backgroundTint="#848384"
        android:contentDescription="@string/bottom_bar"
        app:tint="#838283"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintVertical_bias="0.994"
        app:srcCompat="@android:drawable/title_bar"
        tools:srcCompat="@android:drawable/title_bar" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintVertical_bias="0.064" />

    <ImageButton
        android:id="@+id/add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="#FFFFF1"
        android:contentDescription="@string/add_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:srcCompat="@mipmap/add_item_round"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="73dp"
        android:backgroundTint="#FFFFF1"
        android:contentDescription="@string/list_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:srcCompat="@mipmap/list_item"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/search_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="#FFFFF1"
        android:contentDescription="@string/search_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item"
        app:srcCompat="@mipmap/search_item"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="73dp"
        android:backgroundTint="#FFFFF1"
        android:contentDescription="@string/info_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_item"
        app:srcCompat="@mipmap/info"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/exit_button"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="-5dp"
        android:backgroundTint="#838283"
        android:contentDescription="@string/exit_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>