<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="60dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:rowCount="2"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageButton
                            android:id="@+id/main_add_item"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="12dp"
                            android:backgroundTint="#FFFFF1"
                            android:contentDescription="@string/add_desc"
                            app:srcCompat="@mipmap/add_item_round"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/main_textview_addItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="cursive"
                            android:text="@string/addItem_title"
                            android:textSize="18sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageButton
                            android:id="@+id/main_list_item"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="12dp"
                            android:backgroundTint="#FFFFF1"
                            android:contentDescription="@string/list_desc"
                            app:srcCompat="@mipmap/list_item"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/main_textview_listItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="cursive"
                            android:text="@string/listItem_title"
                            android:textSize="18sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageButton
                            android:id="@+id/main_search_item"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="12dp"
                            android:backgroundTint="#FFFFF1"
                            android:contentDescription="@string/search_desc"
                            app:srcCompat="@mipmap/search_item"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/main_textview_searchItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="cursive"
                            android:text="@string/searchItem_title"
                            android:textSize="18sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageButton
                            android:id="@+id/main_Info"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="12dp"
                            android:backgroundTint="#FFFFF1"
                            android:contentDescription="@string/info_desc"
                            app:srcCompat="@mipmap/info"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/main_textview_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="cursive"
                            android:text="@string/info_title"
                            android:textSize="18sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </GridLayout>
        </LinearLayout>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>