<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemView">

    <TextView
        android:id="@+id/additem_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar4"
        app:layout_constraintVertical_bias="0.064" />

    <ImageButton
        android:id="@+id/top_bar4"
        android:layout_width="421dp"
        android:layout_height="54dp"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-8dp"
        android:backgroundTint="#848384"
        android:contentDescription="@string/top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/title_bar"
        app:tint="#838283"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/exit_button2"
        android:layout_width="59dp"
        android:layout_height="53dp"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="-6dp"
        android:backgroundTint="#838283"
        android:contentDescription="@string/exit_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/top_bar3"
        android:layout_width="421dp"
        android:layout_height="54dp"
        android:layout_marginStart="-6dp"
        android:layout_marginBottom="-6dp"
        android:backgroundTint="#848384"
        android:contentDescription="@string/top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/title_bar"
        app:tint="#838283"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>